# autoconf-bootstrap-projects

./: README.md
helloworld/: configure.ac
helloworld-glib/: configure.ac
helloworld-glib/src/: main.c
helloworld-glib/src/.deps/: helloworld-main.Po
helloworld/src/: Makefile.am  main.c
